# arabic-vlm-ocr

./: .dockerignore  .env  .env example  .gitignore  Dockerfile.agent  LICENSE  README.md  agent.py  docker-compose.yml  main.py  merge.py  pyproject.toml  requirements.txt
.specify/extensions/: .registry
.specify/integrations/: agy.manifest.json  copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  rules.md
.specify/workflows/: workflow-registry.json
scripts/: agent.py
src/: 01_pdf_to_images.py  02_gemini_distill.py  03_format_sharegpt.py
src/utils/: vision_helpers.py
tests/: test_gguf.py
training/: lora_config.yaml
