[project]
name = "arabic-vlm-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.73.1",
    "langchain>=1.2.15",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "openai>=2.32.0",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "tqdm>=4.67.3",
    "typing-extensions>=4.15.0",
]
